support category by provider

--- a/adjust.conf
+++ b/adjust.conf
@@ -8,5 +8,12 @@
 200010000:1
 
 [provider]
-nm_listing_poi:1
-keywords_poi:1
+nuomi_listing:7
+nm_pc_hot_home:5
+nm_listing_poi:28
+nuomi_keywords:3
+keywords_poi:5
+keyword_prophet:1
+emp_detail:1
+nm_listing_emp:1
+poigroupon:1
